Support role-based sanitization for actuator endpoints
Closes gh-32156